[gd_scene load_steps=13 format=3 uid="uid://btgw4uc1kbt1m"]

[ext_resource type="Script" uid="uid://oepi2ncxgt2e" path="res://scripts/character_customization.gd" id="1_4ymi4"]
[ext_resource type="Texture2D" uid="uid://drwograd4q03p" path="res://assets/background.png" id="1_8ygxg"]
[ext_resource type="Texture2D" uid="uid://b82herq7csiaj" path="res://assets/chair_front.png" id="2_4ymi4"]
[ext_resource type="Texture2D" uid="uid://bn0b0jor2rhss" path="res://assets/cin_bar.png" id="3_20y30"]
[ext_resource type="FontFile" uid="uid://dyttdoo6nuy0p" path="res://assets/fonts/BoldPixels.ttf" id="4_xegid"]
[ext_resource type="PackedScene" uid="uid://brry3pdj8are7" path="res://scenes/pause_menu.tscn" id="6_4ymi4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ygxg"]
bg_color = Color(0.952941, 0.917647, 0.847059, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.537255, 0.152941, 0.345098, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f5pgc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_widrb"]
bg_color = Color(0.537255, 0.152941, 0.345098, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.545098, 0.172549, 0.352941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xegid"]
bg_color = Color(0.952941, 0.917647, 0.847059, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.537255, 0.152941, 0.345098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20y30"]
bg_color = Color(0.952941, 0.917647, 0.847059, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.537255, 0.152941, 0.345098, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ymi4"]

[node name="character_customization" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ymi4")

[node name="background" type="TextureRect" parent="."]
z_index = -5
custom_minimum_size = Vector2(640, 360)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_8ygxg")
metadata/_edit_lock_ = true

[node name="front_chair" type="TextureRect" parent="."]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4ymi4")
metadata/_edit_lock_ = true

[node name="TextureRect3" type="TextureRect" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_20y30")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
z_index = 20
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -699.0
offset_top = -341.0
offset_right = 714.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.952941, 0.917647, 0.847059, 1)
theme_override_colors/font_outline_color = Color(0.537255, 0.152941, 0.345098, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_xegid")
theme_override_font_sizes/font_size = 180
text = "Enter Your Name
Here!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player1_name_input" type="LineEdit" parent="."]
z_index = 20
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
offset_left = 173.0
offset_top = 602.0
offset_right = 813.0
offset_bottom = 720.0
theme_override_colors/font_color = Color(0.537255, 0.152941, 0.345098, 1)
theme_override_colors/font_placeholder_color = Color(0.5372549, 0.15294118, 0.34509805, 0.63529414)
theme_override_colors/caret_color = Color(0.537255, 0.152941, 0.345098, 1)
theme_override_fonts/font = ExtResource("4_xegid")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_8ygxg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f5pgc")
placeholder_text = "Player 1"
alignment = 1
max_length = 11

[node name="player2_name_input" type="LineEdit" parent="."]
z_index = 20
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
offset_left = 1117.0
offset_top = 602.0
offset_right = 1757.0
offset_bottom = 720.0
theme_override_colors/font_color = Color(0.537255, 0.152941, 0.345098, 1)
theme_override_colors/font_placeholder_color = Color(0.5372549, 0.15294118, 0.34509805, 0.63529414)
theme_override_colors/caret_color = Color(0.537255, 0.152941, 0.345098, 1)
theme_override_fonts/font = ExtResource("4_xegid")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_8ygxg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f5pgc")
placeholder_text = "Player 2"
alignment = 1
max_length = 11

[node name="start_battle" type="Button" parent="."]
z_index = 20
custom_minimum_size = Vector2(0, 75)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = 235.0
offset_right = 255.0
offset_bottom = 341.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.541176, 0.168627, 0.360784, 1)
theme_override_colors/font_hover_color = Color(0.537255, 0.160784, 0.352941, 1)
theme_override_fonts/font = ExtResource("4_xegid")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_widrb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xegid")
theme_override_styles/hover = SubResource("StyleBoxFlat_20y30")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ymi4")
text = "Start Battle"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="pause_menu" parent="CanvasLayer" instance=ExtResource("6_4ymi4")]
visible = false

[connection signal="pressed" from="start_battle" to="." method="_on_start_battle_pressed"]
